--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,14 +8,17 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid green;
 }
 
-div {
-  border: 1px solid blue;
+.container {
+  display: flex;
+  width: 100%;
+  height: auto;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
-/* HEADER */
+/* Header */
 .header {
   display: flex;
   max-width: 100%;
@@ -28,12 +31,13 @@ div {
   padding: 0.5rem;
 }
 
-.header span {
+.heading {
   padding: 0.66rem 1rem;
   font-size: 1rem;
+  margin: auto 0;
 }
 
-/* MAIN BANNER (motorcycle background image) */
+/* Main Banner */
 #main-banner {
   display: flex;
   width: 100%;
@@ -68,26 +72,36 @@ div {
   line-height: 2.25rem;
 }
 
-/* NAVIGATION */
-#navigation {
-  display: block;
+/* Navigation */
+.navigation {
+  display: flex;
   width: 100%;
   background-color: firebrick;
 }
 
 .navigation-text {
   display: flex;
+  width: 100%;
   max-width: 960px;
   justify-content: space-between;
+  margin: 0 auto;
+}
+
+.navigation-text span {
   padding: 0.75rem;
 }
 
-/* PRODUCT GRID */
+#menu {
+  display: none;
+}
+
+/* Product Grid */
 .product-grid {
   display: inline-flex;
   margin-top: 3rem;
   justify-content: space-between;
   max-width: 960px;
+  width: 100%;
 }
 
 .item {
@@ -96,11 +110,7 @@ div {
   border: 4px solid black;
 }
 
-.glasses {
-  margin: 2rem 0;
-}
-
-#product-image {
+.product-image {
   width: 50%;
   height: 9rem;
   overflow: hidden;
@@ -108,12 +118,16 @@ div {
   padding: 2rem;
 }
 
-#product-image img {
+.product-image img {
   max-width: 100%;
   height: auto;
   display: block;
   margin: 0 auto;
-  border: 1px solid red;
+  flex-shrink: 0;
+}
+
+.glasses {
+  margin: 2rem 0;
 }
 
 .product-text {
@@ -122,7 +136,7 @@ div {
   text-align: center;
 }
 
-/* LOCATION AND HOURS */
+/* Location and Hours */
 .location-hours {
   display: inline-flex;
   width: 100%;
@@ -144,11 +158,178 @@ div {
 .value {
   color: black;
   font-weight: normal;
+  padding-top: 0.3rem;
 }
 
-/* FOOTER */
+/* Footer */
 .footer {
   width: 100%;
   height: 5rem;
   background-color: black;
+}
+
+.copyright {
+  margin-top: 2.5rem;
+  padding-left: 0.5rem;
+}
+
+
+
+/* Media Queries */
+
+/*   Ruleset for 1024px or less   */
+
+@media only screen and (max-width: 1024px) {
+
+  .banner-text p {
+    font-size: .88rem;
+  }
+
+  .banner-text h1 {
+    font-size: 1.88rem;
+  }
+
+  /* Navigation Menu */
+  .navigation-text span {
+    display: none;
+  }
+
+  #menu {
+    display: flex;
+    margin: 0 auto;
+  }
+
+  /* Product Grid */
+  .product-grid {
+    max-width: 100%;
+  }
+
+  .item {
+    width: 47%;
+  }
+
+  #glasses {
+    display: none;
+  }
+
+  .product-image img {
+    max-width: 8em;
+  }
+
+  /* Location and Hours */
+  .location-hours {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .location, .hours {
+    width: 35%;
+    max-width: 35%;
+  }
+
+}
+
+
+
+  /*     Ruleset for 470px or Less    */
+
+@media only screen and (max-width: 470px) {
+
+  .header img {
+    margin: auto;
+  }
+
+  .heading {
+    display: none;
+  }
+
+  /* Main Banner */
+  #main-banner {
+    height: 10rem;
+    width: 100%;
+  }
+
+  .banner-item {
+    height: 6rem;
+    width: 100%;
+
+  }
+
+  .banner-text {
+    margin: 1rem 0 0 2rem;
+    width: 100%;
+  }
+
+  .banner-text p {
+    font-size: .77rem;
+  }
+
+  .banner-text h1 {
+    font-size: 1rem;
+  }
+
+  /* Navigation Menu */
+
+  .navigation {
+    margin-top: 5rem;
+  }
+
+  .navigation-text span {
+    display: none;
+  }
+
+  #menu {
+    display: flex;
+    margin: 0 auto;
+  }
+
+  /* Product Grid */
+  .product-grid {
+    max-width: 100%;
+  }
+
+  #glasses {
+    display: none;
+  }
+
+  #watch {
+    display: none;
+  }
+
+  #pen {
+    margin-bottom: 3rem;
+  }
+
+  .item {
+    width: 90%;
+    margin: auto;
+  }
+
+  .product-image img {
+    max-width: 8em;
+  }
+
+  /* Location and Hours */
+  .location-hours {
+    flex-direction: column;
+    width: 90%;
+    margin: 0 auto;
+    height: auto;
+  }
+
+  .location, .hours {
+    min-width: 100%;
+    margin-bottom: 0.5rem;
+  }
+
+  /* Footer */
+  .footer {
+    margin-top: 3rem;
+  }
+
+  .copyright {
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 1.75rem;
+  }
 }
